Fixed typos and grammar based on reviewer comments

--- a/APA-CP-FieldCage.tex
+++ b/APA-CP-FieldCage.tex
@@ -25,7 +25,7 @@ Figure ~\ref{fig:tpc_apa_overview} at the bottom.  With a wire pitches of 4.67 m
 The grid layer is not depicted in Figure ~\ref{fig:tpc_apa_overview} for clarity. The underlying structure of each APA is a framework of rectangular, stainless steel tubing.  The side and bottom edges of the frame are lined with multiple layers of fiberglass circuit boards, notched along the edges to support and locate the wires that cross the APA face. A set of FR4 combs are glued to the APA frame to capture the wires at regular intervals. The front-end electronics boards are mounted at the top end of the frame and protected by a metal enclosure. 
 
 
-The distance between wire planes is 4.8 mm (3/16 in) matching the standard printed circuit board thickness, and are designed to maintain optimal signal formation. The four wire planes will be electrically biased so that electrons from an ionizing-particle tracks completely drift past the first three planes and are collected by the fourth plane. Calculations show that the minimum bias voltages needed to achieve this goal are $V_G$ = -665V, $V_U$ = -370V, $V_V$ = 0V and $V_X$ = 820V respectively (where G, U, V, and X are the wire-layer labels from outside in, towards the frame).  It is convenient to set one of the wire planes to ground so that the wires can be DC coupled to the front-end readout electronics. In this instance, the V wire plane is set to ground potential to reduce the maximum bias voltages on the other wire planes, and enable the use of lower voltage rated AC coupling capacitors. A grounded mesh plane, located 4.8 mm behind the collection (X) plane, prevents the electric field around this set of wires from being distorted by the metal frame structure and the wires on the opposite side of the frame. It also shields the sensing wires from potential EM interferences from the photon detectors (Fig.~\ref{fig:pd_insertion}) mounted within the frame. The mesh should have a wire pitch less than 2 mm to ensure a uniform electric field while maintaining good optical transparency.
+The distance between wire planes is 4.8 mm (3/16 in) matching the standard printed circuit board thickness, and are designed to maintain optimal signal formation. The four wire planes will be electrically biased so that electrons from ionizing-particle tracks completely drift past the first three planes and are collected by the fourth plane. Calculations show that the minimum bias voltages needed to achieve this goal are $V_G$ = -665 V, $V_U$ = -370 V, $V_V$ = 0 V and $V_X$ = 820 V respectively (where G, U, V, and X are the wire-layer labels from outside in, towards the frame).  It is convenient to set one of the wire planes to ground so that the wires can be DC coupled to the front-end readout electronics. In this instance, the V wire plane is set to ground potential to reduce the maximum bias voltages on the other wire planes, and enable the use of lower voltage rated AC coupling capacitors. A grounded mesh plane, located 4.8 mm behind the collection (X) plane, prevents the electric field around this set of wires from being distorted by the metal frame structure and the wires on the opposite side of the frame. It also shields the sensing wires from potential EM interferences from the photon detectors (Fig.~\ref{fig:pd_insertion}) mounted within the frame. The mesh should have a wire pitch less than 2 mm to ensure a uniform electric field while maintaining good optical transparency.
 
 
 \begin{figure}[t]
@@ -59,7 +59,7 @@ The high flux of cosmic rays combined with very low drift velocity of positive i
 \end{figure}
 
 To achieve a 500~V/cm drift field over a 3.6~m distance, the bias 
-voltage on the cathode plane must reach $-$180~kV. One high voltage power supply (150 -- 200 kV) and one HV feedthrough will be needed for the cathode plane.  The HV feedthroughs are based on the Icarus design, but modified to further improve the stability at higher voltages. %(Fig.~\ref{fig:tpc_hv_ft}).
+voltage on the cathode plane must reach $-$180~kV. One high voltage power supply (150 -- 200 kV) and one HV feedthrough will be needed for the cathode plane.  The HV feedthroughs are based on the ICARUS design, but modified to further improve the stability at higher voltages. %(Fig.~\ref{fig:tpc_hv_ft}).
 
 %\begin{figure}[hb]
 %\centering
