--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -43,7 +43,7 @@
 \begin{document}
 \linenumbers
 
-\title{  Proposal for a Full-Scale Detector Engineering Test and Test Beam Calibration of a Single-Phase LAr TPC}
+\title{  Proposal for a Engineering Test and Beam Calibration of a Full-Scale Single-Phase Liquid Argon Time Projection Chamber}
 
 \date{\today}
 %\date{April 15, 2015}
@@ -60,7 +60,7 @@
 
 \begin{abstract}
 
-After a short introduction to the DUNE physics program we motivate the proposed single phase liquid argon detector engineering test and charged particle beam measurement program. A detailed motivation for the planed beam measurements is provided. The proposed
+After a short introduction to the DUNE physics program we motivate the proposed single phase liquid argon detector engineering test and charged particle beam measurement program. A detailed motivation for the planned beam measurements is provided. The proposed
 single phase liquid argon detector design is described in detail. 
 The proposed single phase liquid argon detector described corresponds largely to the former LBNE detector design which has been adopted by the DUNE collaboration for the first 10~kt detector module at the far site.
 The detector will be placed inside a membrane cryostat which will be connected to a cryogenics systems for both of which we provide engineering details. 
@@ -96,7 +96,7 @@ the sharing of responsibilities.
 	\input{singlephasedet}
 
 
-\section{Cryostat and cryogenics system} % [$\sim$5 pages; {\color{red} David/Barry/Jack}]}
+\section{Cryostat and Cryogenics system} % [$\sim$5 pages; {\color{red} David/Barry/Jack}]}
 	\input{cryo.tex}
 	
 \section{Calibration}
