--- a/bibliography.tex
+++ b/bibliography.tex
@@ -39,7 +39,7 @@ R. Acciarri et al, Journal of Instrumentation
 
 \bibitem{icarus_recombination} ``Study of electron recombination in liquid argon with the ICARUS TPC'', S. Amoruso et. al, NIM A {\bf 523}, 275 (2004). 
 
-\bibitem{nn_pid} based on
+\bibitem{nn_pid} Based on
 ``Neural Network Parameterizations of Electromagnetic Nucleon Form Factors'', K. M. Graczyk, P. Plonski, R. Sulej, JHEP Vol. 2010, No 9, pp.1-30 (2010).
 \bibitem{rd_pid} 
 \url{http://www.ire.pw.edu.pl/~rsulej/NetMaker}
