--- a/cryo.tex
+++ b/cryo.tex
@@ -5,7 +5,7 @@
 
 %\subsection{Cryostat size from TPC dimensions }
 
-The Single Phase detector test at CERN will use a membrane tank technology which is supported by an outer steel structure.
+The single-phase detector test at CERN will use a membrane tank technology supported by an outer steel structure.
 
 The minimum internal size of the cryostat is determined from size of the TPC.  At the bottom of the 
 cryostat there needs to be a minimum of 0.36 m between the frame of the CPA and closest point on the stainless steel 
@@ -18,11 +18,11 @@ The support system for the TPC will be located outside the cryostat roof, with a
 It is the same design solution currently foreseen for the DUNE single phase TPC in the LBNF cryostat.  
 The plan is to model this space similar to what is planned for the far site TPC.  There 
 will be 0.82 m of ullage space.  In order to prevent high voltage discharge, the upper most part of the CPA 
-needs to be submerged a minimum of 0.5 m below the liquid Argon surface.  The top of the TPC will be 
+needs to be submerged a minimum of 0.5 m below the liquid argon surface.  The top of the TPC will be 
 separated from the membrane by a minimum of 1.1 m.  
 
 Adding all of these to the size of the TPC yields the minimum inner dimensions of the cryostat.  A 
-minimally sized cryostat would be 8.9~m long, 7.8~m wide and 8.1~m high.  This assumes the TPC will be 
+minimally-sized cryostat would be 8.9~m long, 7.8~m wide and 8.1~m high.  This assumes the TPC will be 
 positioned inside the cryostat with the CPAs and end field cages parallel to the walls of the cryostat. 
 Figure~\ref{fig:fardet-overview} shows a 3D view of the detector inside the cryostat and Figure~\ref{fig:cryostat-views} shows side and end views of the cryostat, respectively. 
 %
@@ -40,7 +40,7 @@ any of the current boundaries conditions listed above is violated.
   
 %%%%%%%%%%%%%%%%%
 
-The cryostat has an inner volume of $483 m^3$ and can contain  673 tons of LAr.
+The cryostat has an inner volume of 483 m$^3$ and can contain  673 tons of LAr.
 %
 %The design is based on a scaled up version of the LBNE 35-ton Prototype\cite{montanari_35ton} 
 %% (this is a comment) add \cite{montanari_sbn_perf} if public access in docdb 9270 (AH)
@@ -95,15 +95,15 @@ Membrane material    &  SS 304/304L, 316/316L or equivalent. \\ \hline
 Fluid & Liquid argon (LAr)  \\ \hline
 Other materials upon approval.\\ \hline
  Outside reinforcement (support structure)  &  Steel enclosure with metal liner to isolate the outside from the insulation space, standing on legs to allow for air circulation underneath. \\ \hline
- Total cryostat volume  &  538 m3 \\ \hline
- Total LAr volume  &  483 m3 \\ \hline
+ Total cryostat volume  &  538 m$^3$ \\ \hline
+ Total LAr volume  &  483 m$^3$ \\ \hline
 LAr total mass   & 673,000 kg  \\ \hline
 Minimum inner dimensions (flat plate to flat plate).   &  7.8 m (W) x 8.9 m (L) x 8.1 0 (H) \\ \hline
 Depth of LAr   &  7.2 m (0.82 m ullage, same as LBNF) \\ \hline
 Primary membrane   &   1.2 mm thick SS 304L corrugated stainless steel\\ \hline
 Secondary barrier system   &  GTT design; 0.07 mm thick aluminum between fiberglass cloth. Overall thickness 1 mm located between insulation layers.  \\ \hline
  Insulation  &  Polyurethane foam (0.9 m thick from preliminary calculations) \\ \hline
-Maximum static heat leak   &  10 W/m2 \\ \hline
+Maximum static heat leak   &  10 W/m$^2$ \\ \hline
 LAr temperature   & 88 +/- 1K  \\ \hline
 Operating gas pressure   &  Positive pressure. Nominally 70 mbarg ($\sim$1 psig) \\ \hline
  Vaccuum  &  No vacuum \\ \hline
@@ -124,7 +124,7 @@ Beam window   & Precise location TBD. Figure~XXX shows the location where the be
 %
 The membrane cryostat requires insulation applied to all internal surfaces of the outer support structure 
 and roof in order to control the heat ingress and hence required refrigeration heat load. 
-To avoid bubbling of the liquid Argon inside the tank, the maximum static heat leak is $10 W/m^2$ for the floor and the sides and $15 W/m^2$ for the roof, higher to account for the penetrations that increase the heat budget. Preliminary calculations show that these values can be obtained using 0.9 m thick insulation panels of polyurethane foam.
+To avoid bubbling of the liquid argon inside the tank, the maximum static heat leak is 10 W/m$^2$ for the floor and the sides and 15 W/m$^2$ for the roof, higher to account for the penetrations that increase the heat budget. Preliminary calculations show that these values can be obtained using 0.9 m thick insulation panels of polyurethane foam.
 Given an 
 average thermal conductivity coefficient for the insulation material of 0.0283 W/(m·K), the heat input 
 from the surrounding steel is expected to be about 3.2~kW total. It assumes that the hatches are foam 
@@ -217,16 +217,16 @@ Design pressure  & 350 mbarg (~5 psig) \\ \hline
 Design temperature  & 77 K (liquid nitrogen temperature for flexibility) \\ \hline
 Inner dimensions  & To match the cryostat \\ \hline
 Maximum allowable roof deflection  & 0.003 m (differential between APA and CPA) \\ \hline
-Maximum static heat leak  & \textless 15 W/m2  \\ \hline
+Maximum static heat leak  & \textless 15 W/m$^2$  \\ \hline
  Temperatures of all surfaces in the ullage during operation & \textless 100 K \\ \hline
 Additional design loads  &  -	Top self-weight \\
- & -	Live load (488 kg/m2)\\
+ & -	Live load (488 kg/m$^2$)\\
 & -	Electronics racks (400 kg in the vicinity of the feed through)\\
 & -	Services (150 kg on every feed through)
 \\ \hline
 TPC anchors  & %Capacity: AH
 Number and location TBD. Minimum 6.
-xc \\ \hline
+ \\ \hline
  Hatch opening for TPCs installation &  3.550 m x 2.000 m (location TBD)\\ \hline % , to . in numbers
 Grounding plate  &  1.6 mm thick copper sheet brazed to the bottom of the top plate\\ \hline
 Lifting fixtures  & Appropriate for positioning the top at the different parts that constitute it. \\ \hline
@@ -294,7 +294,7 @@ welds are painted with a reactive yellow paint before injecting a Nitrogen-Ammon
 insulation space of the tank. Wherever the paint turns purple or blue, a leak is present. The developer is 
 removed, the weld fixed and the test is performed another time. Any and all leaks will be repaired. The 
 test lasts a minimum of 20 hours and is sensitive enough to detect defects down to 0.003 mm in size 
-and to a $10^{-7} std-cm^3/s$ leak rate (equivalent leak rate at standard pressure and temperature, 1 bar and 
+and to a 10$^{-7}$ std-cm$^3/s$ leak rate (equivalent leak rate at standard pressure and temperature, 1 bar and 
 273 K). To prevent infiltration of water vapor or oxygen through microscopic membrane leaks (below 
 detection level) the insulation spaces will be continuously purged with gaseous argon to provide one 
 volume exchange per day. The insulation space will be maintained at 70 mbar, slightly above 
@@ -315,7 +315,7 @@ detector as well.
 \begin{figure}[htb]
 \begin{center}
 \includegraphics[width=.95\textwidth]{figures/proposed-LN2-system} 
-\caption[Schematic diagram for the proposed LN2 system]{\label{fig:proposed-LN2-system}Schematic diagram for the proposed LN2 system}
+\caption[Schematic diagram for the proposed LN2 system.]{\label{fig:proposed-LN2-system}Schematic diagram for the proposed LN2 system}
 \end{center}
 \end{figure}
 %
@@ -326,7 +326,7 @@ hall. It includes a small buffer volume and an LN2 pumping station that transfer
 condenser and other services as needed. The low estimated heat leak of the vessel ($\sim$3.2~kW) and the 
 location inside an above ground building allow for use of an open loop system typical of other 
 installations operated at Fermilab (LAPD, LBNE 35 ton prototype, MicroBooNE) and at CERN. 
-Main goal of the LN2 system is to provide cooling power for the argon condenser, the initial cool down of 
+The main goal of the LN2 system is to provide cooling power for the argon condenser, the initial cool down of 
 the vessel and the detector, and all other services as needed.
 %
  Table~\ref{tbl:cryo-design-parameters} presents the list of 
@@ -358,18 +358,15 @@ Nominal LAr purification flow rate (filling/ops) & 5.5 day/volume exchange \\ \h
 
 Figure~\ref{fig:proposed-LAr-system} shows a schematic diagram of the proposed liquid argon system. It is based on the design of the 
 LBNE 35 ton prototype, the MicroBooNE detector systems and the plans for the DUNE Far Detector.
-%
 \begin{figure}
 \begin{center}
 \includegraphics[width=1.0\textwidth]{figures/proposed-LAr-system} 
 \caption[Schematic diagram for the proposed LAr system]{\label{fig:proposed-LAr-system} Schematic diagram for the proposed LAr system}
 \end{center}
 \end{figure}
-
-
-Main goal of the LAr system is to purge the cryostat prior to the start of the operations (with GAr in open 
+The main goal of the LAr system is to purge the cryostat prior to the start of the operations (with GAr in open 
 and closed loop), cool down the cryostat and fill it with LAr. Then continuously purify the LAr and the boil 
-off GAr to maintain the required purity which is measured by the detector in form of an electron lifetime.
+off GAr to maintain the required purity which is measured by the detector in the form of an electron drift time measurement.
 
 The LAr receiving facility includes a storage dewar and an ambient vaporizer to deliver LAr and GAr to the 
 cryostat. The LAr goes through the liquid argon handling and purification system, whereas the GAr 
