--- a/daq.tex
+++ b/daq.tex
@@ -1,4 +1,4 @@
-The DAQ will merge data to form events from the TPC, 
+The DAQ back-end software will merge data to form events from the TPC, 
 photon detector and beam detector readouts using the 
 artDAQ data acquisition toolkit using a farm of commercial 
 computers connected with an Ethernet switch.  ArtDAQ is 
