--- a/organ.tex
+++ b/organ.tex
@@ -2,16 +2,15 @@
 %insert organization, schedule and cost estimates here
 
 \subsection{Schedule}
-The schedule of the proposed CERN prototype detector and beam test is dictated by the DUNE overall schedule which foresees to place the first 10~kton detector module 
-underground as early as calendar year 2021. Additional detector modules, possibly of different design, are expected to follow shortly thereafter.
+The major milestones for the proposed CERN prototype detector construction and beam test is dictated by the DUNE overall schedule which foresees to place the first 10~kton detector module underground as early as calendar year 2021. Additional detector modules, possibly of different design, are expected to follow at intervals of 1-2 years in a technically driven schedule.
 Information and results from the CERN beam test will inform decision on the DUNE far detector designs and hence should be available 
 as soon as realistically possible. In addition, the LHC long shutdown, which is presently scheduled for mid-2018 represents a significant
-constraints on the schedule.
+constraint on the schedule.
 In order to meet the requirements, cosmic muon data taking and ideally also beam data taking for the proposed measurement program 
 should be complete prior to  the long LHC shutdown in mid-2018. 
 Figure \ref{fig:schedule} shows a technically limited schedule which meets the above requirements.
 %is based on experiences from the production and installation schedule for the 35~t detector.
-The shown schedule is based on experience of designing and manufacturing components for the 35t detector which will be commissioned starting in July 2015 at  Fermilab.
+This schedule is based on experience of designing and manufacturing components for the 35t detector which will be commissioned starting in July 2015 at  Fermilab.
 \begin{figure}[h]
   \centering
 \includegraphics[scale=0.34]{figures/150219_schedule_3APAmod.png}
@@ -26,18 +25,26 @@ The CERN prototype effort is coordinated by the "CERN Prototype Technical Coordi
 The charge of the CERN prototype Collaboration Technical Coordinator is defined as follows.
 
 The CERN prototype CTC is responsible for the following:
-\begin{enumerate}[i]	\item Prioritize and maintain a schedule of collaboration activities regarding simulations, physics analysis. 	\item Prioritize and maintain a schedule of other collaboration service activities on the CERN prototype.  These activities may include collaboration participation in assembly, commissioning, calibration, debugging, data-taking, shifts, etc. 	\item The responsibility of the CERN prototype CTC shall including maintaining a database of contributions from the collaboration to the CERN detector and beam test prototyping.	\item The CERN prototype CTC shall recruit collaboration personnel and resources.	\item The CERN prototype CTC shall coordinate with the DUNE far detector L-2 project manager and the DUNE technical coordinator
+\begin{enumerate}[i]
+	\item Prioritize and maintain a schedule of collaboration activities regarding simulations and physics analysis. 
+	\item Prioritize and maintain a schedule of other collaboration service activities on the CERN prototype.  These activities may include collaboration participation in assembly, commissioning, calibration, debugging, data-taking, shifts, etc. 
+	\item The responsibility of the CERN prototype CTC shall include maintaining a database of contributions from the collaboration to the CERN detector and beam test prototyping.
+	\item The CERN prototype CTC shall recruit collaboration personnel and resources.
+	\item The CERN prototype CTC shall coordinate with the DUNE far detector L-2 project manager and the DUNE technical coordinator
 \end{enumerate}
+There are currently two CTC sharing the responsibilities.
 
 Several sub-groups are created to effectively execute the tasks required for the CERN prototype detector and beam test. These are: 
-{\bf measurement program + analysis:}   Their charge is: to develop comprehensive and prioritized list of measurements need to evaluate detector performance and detector charged particle response to serve as input into LBNF physics sensitivity studies (beam physics, nucleon decay, supernovae, atmospheric neutrinos).  And to perform simulation studies to quantitatively compare relevance of various measurements.
 
-{\bf beam:} Their charge is: to work closely with the measurement group to identify ideal beam requirements, to work closely with the CERN beam group to develop realistic beam design to make relevant beam measurements, to evaluate and optimize possible beam injection points and beam orientations, to perform beam simulations and provide simulated beam spectra as input for detector response simulations, to identify required beam instrumentation for beam characterization, and to develop beam run plans.
-{\bf calibration:}  Their charge is:  to develop tools to calibrate properties of the detector, to interface with the physics measurement group to prioritize different calibration measurements, and to interface with detector subcomponent working groups to identify all required calibration tools and their integration into the detector /cryostat design.\\
+{\bf Measurement Program + Analysis}   Their charge is: to develop a comprehensive and prioritized list of measurements required to evaluate detector performance and provide detector charged particle response as input into DUNE physics sensitivity studies (beam physics, nucleon decay, supernovae, atmospheric neutrinos).  And to perform simulation studies to quantitatively compare the relevance of various measurements.
+
+{\bf Beam} Their charge is: to work closely with the measurement group to identify ideal beam requirements, to work closely with the CERN beam group to develop realistic beam design to make relevant beam measurements, to evaluate and optimize possible beam injection points and beam orientations, to perform beam simulations and provide simulated beam spectra as input for detector response simulations, to identify required beam instrumentation for beam characterization, and to develop beam run plans.
+
+{\bf Calibration}  Their charge is:  to develop tools to calibrate the performance of the detector, to interface with the physics measurement group to prioritize different calibration measurements, and to interface with detector subcomponent working groups to identify all required calibration tools and their integration into the detector /cryostat design.\\
 
 
 The CERN prototype coordinators work closely with the DUNE far detector manager and the DUNE technical coordinator. 
-Work on detector components is fully embedded in the DUNE project structure. The CTC also coordinates closely with the CERN nu-platform
+Work on detector components is fully embedded in the DUNE project structure. The CTC also coordinates closely with the CERN Neutrino Platform
 leader.\\
 The leaders of the "measurement program analysis" subgroup work closely with the DUNE physics and software coordinators.
 The leader of the "beam" subgroup works closely with the relevant CERN beam-line group leader.
