--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -2,15 +2,19 @@
 
 \subsection{DUNE detector plans}
 
-The far detector for the DUNE collaboration will be a series of four liquid argon time projection chambers (TPC), each in a cryostat that holds a fiducial/active/total LAr mass of 10.0/13.3/16.9 kt. The TPCs will be instrumented with photon detection. It is planned that the first 10 kt detector will be ready for installation in the 2021 timeframe. 
-The design for the first 10~kt detector is a wire plane based TPC with cold electronics readout. Designs of this style are are referred to as single-phase detectors as the charge generation, drift, and detection all occurs in the liquid argon phase. 
-This style TPC features no charge amplification before collection, thereby making a very precise charge measurement possible. 
-To achieve DUNE's goals, a detector much larger than ICARUS, the largest LAr TPC detector built to date, is needed. The former long baseline neutrino experiment (LBNE) was developing a scalable far detector design shown in Figure \ref{fig:fardet-overview} that would scale-up LAr TPC technology by roughly a factor of 40 compared to the ICARUS T600 detector. To achieve this scale-up, a number of novel design elements need to be employed. A membrane cryostat typical for the liquefied natural gas industry will be used instead of a conventional evacuated cryostat. The wire planes or anode plane assemblies (APAs) will be factory-built as planar modules that are then installed into the cryostat. The modular nature of the APAs allow the size of the detector to be scaled up to at least 40 kt fiducial mass. Both the analog and digital electronics will be mounted on the wire planes inside the cryostat in order to reduce the electronic noise, to avoid transporting analog signals large distances, and to reduce the number of cables that penetrate the cryostat. The scintillation photon detectors will employ light collection paddles to reduce the required photo-cathode area and thereby cost. 
+The far detector for the DUNE collaboration will be a series of four liquid argon time projection chambers (TPC), each in a cryostat that holds a fiducial/active/total LAr mass of 10.0/13.3/16.9 kt. The TPCs will be instrumented with photon detection. It is planned that the first 10 kt detector will be ready for installation in the 2022 timeframe. 
+The design for the first 10~kt detector is a submerged wire plane-based TPC with electronic readout also in the liquid argon.  Designs of this style are referred to as single-phase detectors as the charge generation, drift, and detection all occurs in the liquid argon phase.  This style TPC features no charge amplification before collection, thereby making a very precise charge measurement possible. 
+
+
+To achieve DUNE’s goals, a detector is needed that is much larger than ICARUS, the largest LAr TPC detector built to date. The former long-baseline neutrino experiment (LBNE) developed a scalable far detector design shown in Fig.~\ref{fig:fardet-overview} that would scale-up LAr TPC technology by roughly a factor of 40 compared to the ICARUS T600 detector. To achieve this scale-up, a number of novel design elements need to be employed. A membrane cryostat typical for the liquefied natural gas industry will be used instead of a conventional evacuated cryostat.  The wire planes or anode plane assemblies (APAs) will be factory-built as planar modules that are then installed into the cryostat. The modular nature of the APAs allow the size of the detector to be scaled up to at least 40 kt fiducial mass. Both the analog and digital electronics will be mounted on the wire planes inside the cryostat in order to reduce the electronic noise, to avoid transporting analog signals large distances, and to reduce the number of cables that penetrate the cryostat. 
+
+The scintillation photon detectors will employ light collection paddles to reduce the required photo-cathode area and thereby cost.  Designs being considered are also more compact than the photomuliplier tubes solution used elsewhere.
+
 Many of the aspects of the design are being tested in a small scale prototype at Fermilab but given the very large scale of the detector elements a full-scale test is critical. 
 Since the recent formation of the new DUNE collaboration a combined detector design team is emerging. 
 Ideas from this new collaboration have the potential to modify the detector design for the additional three far detector modules
 which are foreseen for DUNE.
-The detector design described here is the LBNE detector design chosen by the DUNE collaboration for the first 10~kt 
+The detector design described here is the LBNE detector design chosen by the DUNE collaboration as the reference design for the first 10~kt 
 detector module and also adopted as the basis for the CERN prototype detector.
 
 \begin{figure}[!htb]
@@ -25,7 +29,7 @@ detector module and also adopted as the basis for the CERN prototype detector.
 \label{fig:fardet-overview} 
 \end{figure}
 
-The engineering goals of the DUNE detector test can be broken into five broad categories: 
+The engineering goals of the single-phase APA/CPA detector test can be broken into five broad categories: 
 \begin{enumerate}
 	\item TPC performance, mechanical and electrical verification, 
 	\item photon detection light yield verification,
@@ -34,10 +38,10 @@ The engineering goals of the DUNE detector test can be broken into five broad ca
 	\item production and installation procedure verification
 \end{enumerate}
 
-	 The goals related to mechanical testing are to test the integrity of the detector. In the current design, each APA measures 2.3 m by 6.0 m and includes 2560 wires and associated readout channels. Given the complexity of these assemblies, a test where the detector can be thermally cycled and tested under operating conditions is highly advised prior to mass production. The mechanical support of the APAs can be tested to verify that the mechanical design is reliable and will accommodate any necessary motion between the large wire planes. The impact of vibration isolation between the cryostat roof and the detector can also be tested. Finally a potential improvement in the cryostat design is the possibility to move the pumps external to the main cryostat. This will reduce any mechanical coupling to the detector and also greatly improve both reliability and ease of repair. \\
+	 The goals related to mechanical testing are to test the integrity of the detector. In the current design, each APA measures 2.3 m by 6.0 m and includes 2560 wires and associated readout channels. Given the complexity of these assemblies, a test where the detector can be thermally cycled and tested under operating conditions is highly advisable prior to mass production. The mechanical support of the APAs can be tested to verify that the mechanical design is reliable and will accommodate any necessary motion between the large wire planes. The impact of vibration isolation between the cryostat roof and the detector can also be tested. Finally, a potential improvement in the cryostat design is the possibility to move the pumps external to the main cryostat. This will reduce any mechanical coupling to the detector and also greatly improve both reliability and ease of repair.
 
 	 
-	 The electrical testing goals are to insure that the high voltage design is robust and that the required low electronic noise level can be achieved. As the detector scale increases so does the capacitance and the stored energy in the device. The design of the field cage and high voltage cathode planes needs to be such that HV discharge is unlikely and that if the event occurs no damage to the detector or cryostat results. The grounding and shielding of large detectors is also critical for low noise operation. By testing the full scale elements one insures that the grounding plan is fully developed and effective. Large scale tests of the resulting design will verify the electrical model of the detector. \\
+	 The electrical testing goals are to insure that the high voltage design is robust and that the required low electronic noise level can be achieved. As the detector scale increases so does the capacitance and the stored energy in the device. The design of the field cage and high voltage cathode planes needs to be such that HV discharge is unlikely and that if the event occurs no damage to the detector or cryostat results. The grounding and shielding of large detectors is also critical for low noise operation. By testing the full scale elements one insures that the grounding plan is fully developed and effective. Large scale tests of the resulting design will verify the electrical model of the detector. 
 
 	 Research at Fermilab utilizing the Materials Test Stand has shown that electronegative contamination to the ultra-pure argon from all materials tested is negligible if the material is under the liquid argon. This implies that the dominant source of contamination originates from the gas ullage region and in the room temperature connections to the detector. Careful design of the ullage region to insure that all surfaces and feedthroughs are cold is expected to greatly reduce the sources of contamination over what exists in present detectors. 
 	 
@@ -46,7 +50,7 @@ The engineering goals of the DUNE detector test can be broken into five broad ca
 %\subsubsection{Overview of the CERN Single-Phase test Detector}
 
 
-This section presents the design details of a single-phase prototype detector which is based on the development of the LBNE collaboration. 
+This section presents the design details of a single-phase prototype detector based on the design by the LBNE collaboration. 
 The DUNE detector design is very modular and the CERN prototype detector will be constructed from modular components of exactly the same design.
 
 \begin{figure}[htb]
@@ -61,18 +65,18 @@ The DUNE detector design is very modular and the CERN prototype detector will be
 \label{fig:CERNdet-overview}
 \end{figure}
 
-The TPC consists of alternating anode plane assemblies (APAs) and cathode plane assemblies (CPAs), with field-cage panels enclosing the four open sides between the anode and cathode planes.  Figure  \ref{fig:CERNdet-overview} shows a sectioned view for the planned TPC inside the cryostat at CERN.  A uniform electric field is created in the volume between the anode and cathode planes. A charged particle traversing this volume leaves a trail of ionization. The electrons drift toward the anode plane, which is constructed from multiple layers of sense wires, inducing electric current signals in the front-end electronic circuits connected to the wires.
+The TPC consists of alternating anode plane assemblies (APAs) and cathode plane assemblies (CPAs), with field-cage panels enclosing the four open sides between the anode and cathode planes.  Fig.~\ref{fig:CERNdet-overview} shows a sectioned view for the planned TPC inside the cryostat at CERN.  A uniform electric field is created in the volume between the anode and cathode planes. A charged particle traversing this volume leaves a trail of ionization. The electrons drift toward the anode plane, which is constructed from multiple layers of sense wires, inducing electric current signals in the front-end electronic circuits connected to the wires.
 
 The TPC will be assembled from elements that are of the same size and materials as those planned for the first DUNE far detector module.  
 
-The overall size of the TPC has been determined based on the desired particle containment in order to address the required physics measurements (see section \ref{detbeamtest}). The TPC will have a 3-APA wide active volume and consist of two drift volume with a drift length of 3.6~m each (see figure \ref{fig:CERNdet-overview}).  
-The APAs have an active (total) area measuring 2.29 m (2.32 m) wide and 6.0 m (6.2 m) high. The combination of the three APAs determines the overall TPC length to be 7.3m. There will be a cathode plane (CPA) in the center between the two rows of APAs.  
+The overall size of the TPC has been determined based on the desired particle containment in order to address the required physics measurements (see section \ref{detbeamtest}). The TPC will have a 3-APA wide active volume and consist of two drift volume with a drift length of 3.6~m each (see Fig.~\ref{fig:CERNdet-overview}).  
+The APAs have an active (total) area measuring 2.29 m (2.32 m) wide and 6.0 m (6.2 m) high. The combination of the three APAs determines the overall TPC length to be 7.3~m. There will be a cathode plane (CPA) in the center between the two rows of APAs.  
 The overall width of the TPC will be determined by a combination of the drift distances along with the thickness of the APAs
 and amounts to 7.4~m.  
-The overall height of the TPC is determined by the height of the APA which is 6.4m.  The TPC dimensions are summarized in 
-table~\ref{table:TPC-dim}.
+The overall height of the TPC is determined by the height of the APA which is 6.4~m.  The TPC dimensions are summarized in 
+Table~\ref{table:TPC-dim}.
 %
-The minimum internal size of the cryostat is also indicated in table \ref{table:TPC-dim} and was determined by adding the necessary mechanical and electrical clearances to the computed size of the TPC.  
+The minimum internal size of the cryostat is also indicated in Table \ref{table:TPC-dim} and was determined by adding the necessary mechanical and electrical clearances to the computed size of the TPC.  
  
 \begin{table}[h]
 \centering
@@ -92,7 +96,7 @@ Along with the APAs and CPAs, the TPC will include a field cage that surrounds t
 
 %This is a series of fiberglass I-beams for the structural elements.  These I-beams will be tiled with large copper sided FR4 panels to create the field cage.  Each panel will be connected with a series of resistors.  The field cage will also be connected to the CPAs through a capacitor assembly.
 
-All of this will be supported by rows of I-beams supported from a mechanical structure above the cryostat.  The hangers for these I-beams will pass through the insulated top cap.  There will be a series of feed-through flanges in the top cap of the cryostat to bring in and take out services for the TPC.  One HV feed-through is foreseen for the CPA row and one signal feed-through for each of the APAs.
+All of this will be supported by rows of I-beams supported from a mechanical structure above the cryostat.  The hangers for these I-beams will pass through the insulated top cap.  There will be a series of feedthrough flanges in the top cap of the cryostat to bring in and take out services for the TPC.  One HV feed-through is foreseen for the CPA row and one signal feed-through for each of the APAs.
 
 The design also foresees the option to have the two APA rows mounted at 2.5~m from the central CPA each.
 A reduced drift distance between the APA and CPA represents a deviation from DUNE far detector design but is potentially very
