--- a/testbeamreq.tex
+++ b/testbeamreq.tex
@@ -1,7 +1,9 @@
 \label{testbeamreq}
 \subsection{Particle Beam Requirements}
-The requested beam parameters are driven by the requirement that the results from the CERN test beam should be directly applicable to the future large underground single-phase LAr detector with minimal extrapolation. The CERN test beam data will be used to evaluate the detector performance, to understand the various physics systematic effects, and to provide ``neutrino-like'' data for event reconstruction studies. To satisfy the requirement, the beam parameters must span a broad range of particle spectrum that are expected in the future neutrino experiment. The particle beam composition should consist of electrons, muons, and hadron beams that are charge-selected. The expected momentum distributions for secondary particles from neutrino interactions are shown in Figure~\ref{fig:particle_momenta}. There is a large spread in the momentum distribution with most particles peaked near 200 MeV/c. To cover the momentum range of interest, the momentum of the test beam should step from 0.2 GeV/c up to 10 GeV/c. The maximum electron drift time in the TPC is about 2.2 ms. To minimize pile-up in the TPC, the desired beam rate should be around 200 Hz. The single-phase TPC consists of two drift volumes. It is desirable to aim the particle beam so that the hadronic showers are mostly contained in the same drift volume.  However, we also plan to take some data with the beam entering different region of the TPC, and may include some data with particles crossing one drift volume to the next. %The two beam entry angles and positions with respect to the LAr cryostat are shown in Figures \ref{fig:BP_SideView} and \ref{fig:BP_TopView}. 
-The beam nominally enters the cryostat slightly downward at an angle of about 6 degrees. The 6 degrees angle is roughly the angle at which the neutrino beam enters the liquid argon cryostat at the far detector for the DUNE experiment. Along the horizontal plane, the beam enters the cryostat with an angle of about 10 degrees to avoid pointing the beam perpendicular to the electron drift in the TPC. The summary of the beam requirements are shown in Table~\ref{table:beamspecs}.
+The requested beam parameters are driven by the requirement that the results from the CERN test beam should be directly applicable to the future large underground single-phase LAr detector with minimal extrapolation. The CERN test beam data will be used to evaluate the detector performance, to understand the various physics systematic effects, and to provide ``neutrino-like'' data for event reconstruction studies. To satisfy the requirement, the beam parameters must span a broad range of particle spectrum that are expected in the future neutrino experiment. The particle beam composition should consist of electrons, muons, and hadron beams that are charge-selected. The expected momentum distributions for secondary particles from neutrino interactions are shown in Figure~\ref{fig:particle_momenta}. There is a large spread in the momentum distribution with most particles peaked near 200 MeV/c. To cover the momentum range of interest, the momentum of the test beam should step from 0.2 GeV/c up to 10 GeV/c. 
+
+The maximum electron drift time in the TPC is about 2.2 ms. So, to minimize pile-up in the TPC, the planned beam rate should be around 200 Hz.  Since the single-phase TPC consists of two drift volumes, it is desirable to aim the particle beam so that the hadronic showers are mostly contained in the same drift volume.  The nominal plan is to have the beam enter the cryostat slightly downward at an angle of about 6 degrees. This angle will roughly match the angle at which the neutrino beam enters the liquid argon cryostat at the far detector for the DUNE experiment. Along the horizontal plane, the beam should enter the cryostat with an angle of about 10 degrees to avoid pointing the beam perpendicular to the electron drift in the TPC.  We also plan to take some data with the beam entering a different region of the TPC, and may include some data with particles crossing one drift volume to the next.  The summary of the beam requirements are shown in Table~\ref{table:beamspecs}.
+%The two beam entry angles and positions with respect to the LAr cryostat are shown in Figures \ref{fig:BP_SideView} and \ref{fig:BP_TopView}. 
 
 %\begin{figure}[h!]
 %  \centering
@@ -48,7 +50,7 @@ The beam nominally enters the cryostat slightly downward at an angle of about 6 
 \end{table}
 
 \subsection{EHN1 H4ext Beamline}
-The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, 60 - 80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Figure~\ref{fig:H4extPrelim}.  In the Figure, the cryostat for this proposal is located at the lower right hand corner of the plot. The cryostat in the upper left is for the WA105 Collaboration.
+The H4ext is an extension of the existing H4 beamline in Experimental Hall North 1 (EHN1).  To produce particles in the momentum range of interest, a 60-80 GeV/c pion beam from the T2 target is used to generate tertiary beams. The tertiary particles are momentum and charge-selected and transported down H4ext beamline to the experimental area. A conceptual layout of the H4ext beamline is shown in Figure~\ref{fig:H4extPrelim}.  In the Figure, the cryostat for this proposal is located at the lower right hand corner of the plot. The cryostat in the upper left is for the WA105 Collaboration.
 
 \begin{figure}[h]
   \centering
@@ -68,7 +70,7 @@ Beam instrumentation provides important information about the characteristics of
 The beam position detector measures the positions of the particle as it traverses the detector. Two detector technologies are under considerations: wire chambers and scintillating fiber trackers. For the nominal setup, one beam position detector is installed upstream and another one downstream of the last bending magnet. This pair provides additional momentum information about the particles as well as the first set of position measurements. Without tracking information, the momentum spread of the beam is expected to be at around 5\% based on the acceptance of the dipole magnets. With additional tracking information, we are likely to be able to measure the momentum of the individual particles to close to one percent level. A third beam position detector is placed right in front of the beam window on the cryostat wall to provide the last position information before the beam enters the cryostat.
 
 \subsubsection{Particle Identification}
-In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles. We will require $\geq$ 3$\sigma$ $K$/$\pi$ separation for momentum range from 0.2 to a few GeV/c. We are aiming to have samples of $\pi$'s and $K$'s with purity better than 95\%. Work is in progress to better define the beamline layout to meet these requirements.
+In order to have good particle identification over large momentum range, two independent particle identification systems are needed in the beamline. The Time-of-Flight system will be used to cover the lower momentum range while a Threshold Cherenkov detector will be tuned for higher momentum particles. We will require $\geq$ 3$\sigma$ $K$/$\pi$ separation for momentum range from 0.2 to a few GeV/c. We are aiming to have samples of $\pi$'s and $K$'s with purity better than 95\%. Work is in progress to better define the beamline layout to meet these requirements.
 
 \subsubsection{Muon Beam Halo Counters}
 The halo counter is a set of plastic scintillator paddles surrounding the beamline. The main purpose is to tag particles (primarily muons from the upstream production target) that are outside of the beam axis, but may potentially enter the TPC volume. The counter information is used to either veto or simply flag these class of events. The Muon Beam Halo counter can be a subset of the cosmic muon veto system. 
@@ -87,7 +89,7 @@ At the time of this proposal, the beamline design has not been finalized. To est
 \label{fig:PionOnCuTarget}
 \end{figure}
 
-To formulate a preliminary beam time request, we assume the hadron beam rates and spectrum as given in Figure~\ref{fig:PionOnCuTarget}. For the beam rate estimates, we account for particle lifetimes assuming the distance from the secondary target to the cryostat to be 30 m and the data taking efficiency to be about 50\%. For the electron sample, we expect a different optimized beamline setup to produce a pure electron beam with a flux of about 200 Hz. A preliminary run plan for one configuration is shown in Table~\ref{tab:RunPlan}. The number of spills needed for each momentum bin is driven by the samples highlighted in red or by the requirement that we collect at least 150 spills ($\approx$ 2 hours of beam time) per momentum bin . This proposed plan satisfies the requested samples as listed in Table~\ref{tab:runsum}, except for Kaons less than 1 GeV. Most low momentum Kaons produced from the secondary target decay before reaching the liquid argon cryostat. To obtain those samples, we will need to carry out extended runs and trigger exclusively on particles tagged as Kaons by either the time-of-flight or the threshold Cherenkov counters.
+To formulate a preliminary beam time request, we assume the hadron beam rates and spectrum as given in Figure~\ref{fig:PionOnCuTarget}. For the beam rate estimates, we account for particle lifetimes assuming the distance from the secondary target to the cryostat to be 30 m and the data taking efficiency to be about 50\%. For the electron sample, we expect a different optimized beamline setup to produce a pure electron beam with a flux of about 200 Hz. A preliminary run plan for one configuration is shown in Table~\ref{tab:RunPlan}. The number of spills needed for each momentum bin is driven by the samples highlighted in red or by the requirement that we collect at least 150 spills ($\approx$ 2 hours of beam time) per momentum bin.  This proposed plan satisfies the requested samples as listed in Table~\ref{tab:runsum}, except for kaons less than 1 GeV. Most low momentum kaons produced from the secondary target decay before reaching the liquid argon cryostat. To obtain those samples, we will need to carry out extended runs and trigger exclusively on particles tagged as kaons by either the time-of-flight or the threshold Cherenkov counters.
 
 \begin{table}[tb]
 \centering
@@ -139,5 +141,5 @@ To formulate a preliminary beam time request, we assume the hadron beam rates an
 \label{tab:RunPlan}
 \end{table}
 
-In addition to the above samples with beam at the nominal position, we expect to take some additional data with the beam entering the TPC at different position and angles. Without a detail beamline design, there are still some uncertainties on the actual beam rates. Based on the information that we have, the total estimated beam time needed to carry out the physics program (physics samples as listed in Table~\ref{tab:runsum}, multiple angles and beam positions, dedicated Kaon runs, etc) in this proposal is about 4 to 6 weeks.
+In addition to the above samples with beam at the nominal position, we expect to take some additional data with the beam entering the TPC at different position and angles. Without a detail beamline design, there are still some uncertainties on the actual beam rates. Based on the information that we have, the total estimated beam time needed to carry out the physics program (physics samples as listed in Table~\ref{tab:runsum}, multiple angles and beam positions, dedicated kaon runs, etc) in this proposal is about 4 to 6 weeks.
  
