--- a/nuplatform.tex
+++ b/nuplatform.tex
@@ -13,7 +13,7 @@ The outer steel support structure reduces the time needed for the construction: 
 \item {\bf Cryogenics construction:}
 
 \item {\bf Detector component construction:} 
-TPC and PDS detector components will be manufactured and submitted to quality assurance procedures at the respective future DUNE detector component production sites. Successively components will be shipped to CERN for further testing and final assembly into the cryostat. This approach allows to ready the various production sites for the first 10~kt module of the DUNE far detector.
+TPC and PDS detector components will be manufactured and submitted to quality assurance procedures at one or more of the potential DUNE detector component production sites. Successively, components will be shipped to CERN for further testing and final assembly into the cryostat. This approach will begin the preparations for the various production sites for the first 10~kt module of the DUNE far detector.
 
 %\item {\bf PDS schedule items:}
 %Once the technology has been chosen the PD group will focus on optimizing the selected design with the goal of procurement and assembly taking place in late FY 2016 and early FY 2016. The photon detector paddles will then be tested and shipped to CERN in early FY 2017 for installation into the APAs in late FY 2017 in preparation for installation into the test cryostat and operation in 2018. 
